--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,462</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">24,742</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.jala.qa.TestLayer.LoginTestPage</td><td><a href="#m0">validateLoginPage</a></td><td rowspan="1">1763050313358</td><td rowspan="1">3470</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.jala.qa.TestLayer.EmployeeCreateTestPage</td><td><a href="#m0">validateEmployeeCreatePage</a></td><td rowspan="1">1763287946760</td><td rowspan="1">12099</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.jala.qa.TestLayer.LoginTestPage#validateLoginPage</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Home page title matched, TC Passed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.jala.qa.TestLayer.EmployeeCreateTestPage#validateEmployeeCreatePage</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Search Employee page title matched, TC Passed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
